07-test-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client-fe
  namespace: frontend
  labels:
    app: frontend-test 
    app: frontend 
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["/bin/sh", "-c", "sleep 3600"]
    resources:
      requests:
        cpu: "50m"      
        memory: "64Mi"  
---
apiVersion: v1
kind: Pod
metadata:
  name: test-client-be
  namespace: backend
  labels:
    role: api
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["/bin/sh", "-c", "sleep 3600"]
    resources:
      requests:
        cpu: "50m"
        memory: "64Mi"
