03-services.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 80    
      nodePort: 30080   
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-sql-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: my-sql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
